  Add remove_recipient method to the transaction object (Jared Johnson)

0.80 - February 27, 2009

  moved development to git repository!
  
  reorganized plugin author documentation
  
  added End of headers hook: data_headers_end
  
  added "random error plugin"
  
  improve logging of plugins generating fatal errors (Steve Kemp)
  
  async: added $connection->local_ip, $connection->local_port
  
  async: Fix bug where the body_file/body_filename wouldn't have headers
  
  lower log level of rcpt/from addresses
  
  prefork: improve shutdown of parent (and children) on very busy
  systems (Diego d'Ambra)
  
  prefork: exit codes cleanup (based on patch by Diego d'Ambra)
  
  prefork: detect and reset locked shared memory (based on patch by
  Diego d'Ambra)
  
  prefork: untaint the value of the --interface option (reported by
  Diego d'Ambra)
  
  prefork: the children pool size was sometimes not adjusted immediately
  after the exit of children (reported by Diego d'Ambra)
  
  async, prefork: detach and daemonize only after reading the configuration
  and loading the plugins, to give the init scripts a chance to detect
  failed startups due to broken configuration or plugins (Diego d'Ambra)
  
  plugins/tls: close the file descriptor for the SSL socket
  
  plugins/queue/maildir: multi user / multi domain support added
  set the Return-Path header when queuing into maildir mailboxes
  
  plugins/require_resolvable_fromhost: check all MX hosts, not just the first
  
  remove outdated virus/check_for_hi_virus plugin
  
  prefork, forkserver: restart on SIGHUP (reload all modules, with register()
  or init() phase).
  
  prefork: add --detach option to daemonize like forkserver
  use user/group switching from forkserver to support secondary groups 
  (needed with plugins/queue/postfix-queue)
  --pid-file now works
  
  apache: add post-connection hook, connection->reset
  
  Create async version of dns_whitelist_soft, rhsbl and uribl plugins.
  